syntax = "proto3";

package controller.storage.iam.store.v1;
option go_package = "github.com/hashicorp/watchtower/internal/iam/store;store";

import "controller/storage/timestamp/v1/timestamp.proto";

message UserAccount {
  // private_id is primary key for the user account
  // @inject_tag: gorm:"primary_key"
  string private_id = 1;

  // create_time from the RDBMS
  // @inject_tag: `gorm:"default:current_timestamp"`
  timestamp.v1.Timestamp create_time = 2;

  // user_id is the iam.user associated with this account
  // @inject_tag: `gorm:"default:null"`
  string user_id = 3;

  // scope_id for the user account
  // @inject_tag: `gorm:"default:null"`
  string scope_id = 4;

  // auth_method_id is the auth method associated with this user account.
  // @inject_tag: `gorm:"default:null"`
  string auth_method_id = 5;

  // auth_account_id is the auth method account associated with this user
  // account.
  // @inject_tag: `gorm:"default:null"`
  string auth_account_id = 6;
}